Allow texture atlases to add ```Image```s

--- a/libs/UI/CMakeLists.txt
+++ b/libs/UI/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(${LIBRARY_NAME} STATIC
     ${LIBRARY_HEADERS_DIRECTORY}/layout/Cell.h
 
     ${LIBRARY_HEADERS_DIRECTORY}/Label.h
+    ${LIBRARY_HEADERS_DIRECTORY}/ImageElement.h
     ${LIBRARY_HEADERS_DIRECTORY}/Button.h
     ${LIBRARY_HEADERS_DIRECTORY}/Core.h
     
@@ -35,6 +36,7 @@ add_library(${LIBRARY_NAME} STATIC
     ${LIBRARY_SOURCE_DIRECTORY}/layout/Cell.cpp
 
     ${LIBRARY_SOURCE_DIRECTORY}/Label.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/ImageElement.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Button.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Core.cpp
 )
