Separate textures and cubemaps

--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -46,6 +46,7 @@ set(LIBRARY_HEADERS
     ${LIBRARY_HEADERS_DIRECTORY}/graphics/gl/Framebuffer.h
     ${LIBRARY_HEADERS_DIRECTORY}/graphics/gl/Texture.h
     ${LIBRARY_HEADERS_DIRECTORY}/graphics/gl/TextureArray.h
+    ${LIBRARY_HEADERS_DIRECTORY}/graphics/gl/Cubemap.h
 
     ${LIBRARY_HEADERS_DIRECTORY}/graphics/gl/TextureAtlas.h
     ${LIBRARY_HEADERS_DIRECTORY}/graphics/gl/VertexArray.h
@@ -97,6 +98,8 @@ set(LIBRARY_SOURCE
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/Shader.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/Framebuffer.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/Texture.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/Cubemap.cpp
+
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/TextureArray.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/VertexArray.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/gl/Batch.cpp
