Remove "::get()." syntax, favouring namespaces

--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -4,6 +4,7 @@ set(PROJECT_NAME Icosahedron)
 set(LIBRARY_NAME Icosahedron)
 
 set(LIBRARY_HEADERS_DIRECTORY include/${LIBRARY_NAME})
+
 set(LIBRARY_HEADERS 
     ${LIBRARY_HEADERS_DIRECTORY}/Global.h
 
@@ -94,6 +95,9 @@ set(LIBRARY_HEADERS
 
 set(LIBRARY_SOURCE_DIRECTORY src)
 set(LIBRARY_SOURCE
+    ${LIBRARY_SOURCE_DIRECTORY}/math/Mathf.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/math/EarClippingTriangulation.cpp
+
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/Image.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/ImageIO.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/graphics/Images.cpp
