--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -139,8 +139,11 @@ set(LIBRARY_SOURCE
     ${LIBRARY_SOURCE_DIRECTORY}/scene/3d/controllers/FreeRoamCameraController3D.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/scene/3d/controllers/OrbitalCameraController3D.cpp
 
-    
+
+    ${LIBRARY_SOURCE_DIRECTORY}/util/GeometryGenerator.cpp
+
     ${LIBRARY_SOURCE_DIRECTORY}/Renderer.cpp
+
     ${LIBRARY_SOURCE_DIRECTORY}/Application.cpp
 )
 
