--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIBRARY_HEADERS_DIRECTORY include/${LIBRARY_NAME})
 
 set(LIBRARY_HEADERS 
     ${LIBRARY_HEADERS_DIRECTORY}/Global.h
+    ${LIBRARY_HEADERS_DIRECTORY}/util/Time.h
 
     ${LIBRARY_HEADERS_DIRECTORY}/entity/ECS.h
     ${LIBRARY_HEADERS_DIRECTORY}/entity/Component.h
