Added sphere raycasting

--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -101,6 +101,7 @@ set(LIBRARY_SOURCE
     ${LIBRARY_SOURCE_DIRECTORY}/math/Interpolation.cpp
 
     ${LIBRARY_SOURCE_DIRECTORY}/math/geom/Bezier.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/math/geom/Raycast.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/math/geom/Rasterization.cpp
 
     ${LIBRARY_SOURCE_DIRECTORY}/math/EarClippingTriangulation.cpp
