--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -97,6 +97,8 @@ set(LIBRARY_HEADERS
 
 set(LIBRARY_SOURCE_DIRECTORY src)
 set(LIBRARY_SOURCE
+    ${LIBRARY_SOURCE_DIRECTORY}/util/Time.cpp
+
     ${LIBRARY_SOURCE_DIRECTORY}/math/Mathf.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/math/Interpolation.cpp
 
