--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,10 +52,10 @@ target_link_libraries(main Icosahedron Physics UI
 IcosahedronDebug ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} freetype)
 
 ##### Examples #####
-#add_executable(examples "examples/2D/Framebuffer.cpp")
-#
-#target_link_libraries(examples Icosahedron Physics UI 
-#IcosahedronDebug ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} freetype)#
+add_executable(examples "examples/demos/HeatEquation.cpp")
+
+target_link_libraries(examples Icosahedron Physics UI 
+IcosahedronDebug ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} freetype)#
 
 include(CTest)
 enable_testing()
