Move the two debug tools to the main library

--- a/libs/UI/CMakeLists.txt
+++ b/libs/UI/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(${LIBRARY_NAME} STATIC
     ${LIBRARY_HEADERS_DIRECTORY}/ImageElement.h
     ${LIBRARY_HEADERS_DIRECTORY}/Button.h
     ${LIBRARY_HEADERS_DIRECTORY}/Checkbox.h
+    ${LIBRARY_HEADERS_DIRECTORY}/Slider.h
     ${LIBRARY_HEADERS_DIRECTORY}/Core.h
     
     # Sources
@@ -40,6 +41,7 @@ add_library(${LIBRARY_NAME} STATIC
     ${LIBRARY_SOURCE_DIRECTORY}/ImageElement.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Button.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Checkbox.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/Slider.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Core.cpp
 )
 
