--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIBRARY_HEADERS_DIRECTORY include/${LIBRARY_NAME})
 
 set(LIBRARY_HEADERS 
     ${LIBRARY_HEADERS_DIRECTORY}/Global.h
+    ${LIBRARY_HEADERS_DIRECTORY}/Debug.h
     ${LIBRARY_HEADERS_DIRECTORY}/util/Time.h
 
     ${LIBRARY_HEADERS_DIRECTORY}/entity/ECS.h
@@ -98,6 +99,7 @@ set(LIBRARY_HEADERS
 set(LIBRARY_SOURCE_DIRECTORY src)
 set(LIBRARY_SOURCE
     ${LIBRARY_SOURCE_DIRECTORY}/util/Time.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/Debug.cpp
 
     ${LIBRARY_SOURCE_DIRECTORY}/math/Mathf.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/math/Interpolation.cpp
