--- a/libs/UI/CMakeLists.txt
+++ b/libs/UI/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(${LIBRARY_NAME} STATIC
     ${LIBRARY_HEADERS_DIRECTORY}/Button.h
     ${LIBRARY_HEADERS_DIRECTORY}/Checkbox.h
     ${LIBRARY_HEADERS_DIRECTORY}/Slider.h
+    ${LIBRARY_HEADERS_DIRECTORY}/TextField.h
     ${LIBRARY_HEADERS_DIRECTORY}/Core.h
     
     # Sources
@@ -42,6 +43,7 @@ add_library(${LIBRARY_NAME} STATIC
     ${LIBRARY_SOURCE_DIRECTORY}/Button.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Checkbox.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Slider.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/TextField.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Core.cpp
 )
 
