Rudimentary scene graph implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ add_executable(main "src/main.cpp")
 target_link_libraries(main Icosahedron Physics UI ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} freetype)
 
 ##### Examples #####
-add_executable(examples "examples/2D/Mesh2D.cpp")
+add_executable(examples "examples/ECS-scene/SceneGraph.cpp")
 target_link_libraries(examples Icosahedron Physics UI ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} freetype)
 
 include(CTest)
