A very useful commit

--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -9,6 +9,7 @@ set(LIBRARY_HEADERS
     ${LIBRARY_HEADERS_DIRECTORY}/Global.h
     ${LIBRARY_HEADERS_DIRECTORY}/Debug.h
     ${LIBRARY_HEADERS_DIRECTORY}/util/Time.h
+    ${LIBRARY_HEADERS_DIRECTORY}/util/IO.h
 
     ${LIBRARY_HEADERS_DIRECTORY}/entity/ECS.h
     ${LIBRARY_HEADERS_DIRECTORY}/entity/Component.h
@@ -102,6 +103,7 @@ set(LIBRARY_HEADERS
 set(LIBRARY_SOURCE_DIRECTORY src)
 set(LIBRARY_SOURCE
     ${LIBRARY_SOURCE_DIRECTORY}/util/Time.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/util/IO.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/Debug.cpp
 
 
